--- a/trm187.md
+++ b/trm187.md
@@ -1,3 +1,3 @@
-trm187.md
-Ejercicio 2: https://github.com/trm187/ejercicio2Examen2020
-Ejericio 3: https://github.com/trm187/ejercicio3examen
+##trm187.md
+###Ejercicio 2: https://github.com/trm187/ejercicio2Examen2020
+###Ejercicio 3: https://github.com/trm187/ejercicio3examen
