--- a/trm187.md
+++ b/trm187.md
@@ -1,3 +1,10 @@
-trm187.md
+## trm187.md
+
 http://35.246.1.24:8080
 
+
+### Ejercicio 2:
+https://github.com/trm187/ejercicio2Examen2020
+
+### Ejercicio 3:
+https://github.com/trm187/ejercicio3examen
